syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/test/testgrpc";


import "google/protobuf/empty.proto";



package testgrpc.cached;


service CachedService {
  rpc Increment(IncrementRequest) returns (google.protobuf.Empty);
  rpc GetValue(google.protobuf.Empty) returns (Value);
  rpc GetValueWithForcedClientCaching(google.protobuf.Empty) returns (Value);

  // Adds the value to the an arbitrary server-side object. 
  // If the object doesn't exist create a new one and it set it to the value.
  rpc IncrementObject(IncrementObjectRequest) returns (google.protobuf.Empty);
  rpc GetObjectValue(ObjectReference) returns (Value);
}

message RefreshRequest {
  bool refresh = 1;
}

// ObjectReference must implement the `CacheKeyer` interface
message ObjectReference {
  string id = 1;
}
  
  
message IncrementRequest {
  int64 value = 1;
}

message IncrementObjectRequest {
  ObjectReference id = 1;
  int64 value = 2;
}

message Value {
  int64 value = 1;
}